# TWN.DiscordBot.Interfaces/IDiscordClientAsync.cs
@@ -7,6 +7,8 @@ namespace TWN.DiscordBot.Interfaces;
 
 public interface IDiscordClientAsync : IHealthCheckProviderAsync<DiscordConnectionState>
 {
+  OneOf<Result<string>, NotFound> GetGuildIconUrl(ulong guildID);
+  OneOf<Result<DiscordClientData>, Error<Exception>> GetDiscordClientData();
   OneOf<Result<string>, NotFound> GetGuildName(ulong guildID);
   Task<OneOf<Result<string>, NotFound>> GetChannelNameAsync(ulong channelID, CancellationToken cancellationToken);
   Task SendTwitchMessageAsync(ulong guildID, ulong channelID, DiscordTwitchEmbedData twitchData, CancellationToken cancellationToken);
