# TWN.DiscordBot.WebHost/InitExtensions.cs
@@ -1,10 +1,11 @@
-﻿using HealthChecks.UI.Client;
+﻿using System.Text.Json.Serialization;
+
+using HealthChecks.UI.Client;
+using HealthChecks.UI.Core;
 
 using Microsoft.AspNetCore.Builder;
-using Microsoft.AspNetCore.Diagnostics.HealthChecks;
 using Microsoft.AspNetCore.Http;
 using Microsoft.Extensions.DependencyInjection;
-using Microsoft.Extensions.Diagnostics.HealthChecks;
 using Microsoft.OpenApi.Models;
 
 using TWN.DiscordBot.WebHost;
@@ -18,14 +19,15 @@ public static class InitExtensions
   public static IServiceCollection AddBotAPIServices(this IServiceCollection serviceCollection)
   {
     return serviceCollection
-      .AddSingleton<IDataStoreServiceAsync, DataStoreService>()
-      .AddSingleton<IDiscordClientServiceAsync, DiscordClientService>()
-      .AddSingleton<ITwitchClientServiceAsync, TwitchClientService>()
+      .AddSingleton<IDataStoreApiServiceAsync, DataStoreApiService>()
+      .AddSingleton<IDiscordClientApiServiceAsync, DiscordClientApiService>()
+      .AddSingleton<ITwitchClientApiServiceAsync, TwitchClientApiService>()
+      .AddSingleton<IHealthCheckApiServiceAsync, HealthCheckApiService>()
       .AddEndpointsApiExplorer()
       .AddHealthChecks()
-        .AddCheck<TwitchHealthCheck>("Twitch API", HealthStatus.Unhealthy)
-        .AddCheck<DiscordHealthCheck>("Discord.Net", HealthStatus.Unhealthy)
-        .AddCheck<DataStoreHealthCheck>("Datastore", HealthStatus.Unhealthy)
+        .AddCheck<TwitchHealthCheck>("Twitch API")
+        .AddCheck<DiscordHealthCheck>("Discord.Net")
+        .AddCheck<DataStoreHealthCheck>("Datastore")
         .Services
       .AddHealthChecksUI(opt =>
       {
@@ -33,21 +35,23 @@ public static class InitExtensions
           .SetEvaluationTimeInSeconds(10)
           .MaximumHistoryEntriesPerEndpoint(60)
           .SetApiMaxActiveRequests(1)
-          .AddHealthCheckEndpoint("feedback api", "/api/health")
+          .AddHealthCheckEndpoint("health-api", "/api/health")
         ;
       })
         .AddInMemoryStorage()
         .Services
+        .AddControllers()
+        .AddJsonOptions(jsonOptions => jsonOptions.JsonSerializerOptions.Converters.Add(new JsonStringEnumConverter<UIHealthStatus>()))
+        .Services
       .AddSwaggerGen(sgo =>
       {
+        sgo.UseAllOfToExtendReferenceSchemas();
       })
     ;
   }
 
-  public static void USeBotAPI(this WebApplication webApplication)
+  public static void UseBotAPI(this WebApplication webApplication)
   {
-    webApplication.UseHealthChecks();
-
     webApplication
 #if DEBUG
     .UseSwagger()
@@ -59,37 +63,44 @@ public static class InitExtensions
 
   public static void MapBotAPI(this WebApplication webApplication)
   {
+    webApplication.MapHealthChecks();
     webApplication.MapDataAPI();
     webApplication.MapDiscordAPI();
     webApplication.MapTwitchAPI();
 
   }
 
-  private static void UseHealthChecks(this WebApplication webApplication)
+  private static void MapHealthChecks(this WebApplication webApplication)
   {
-    webApplication.UseHealthChecks("/api/health", new HealthCheckOptions()
-    {
-      Predicate = _ => true,
-      ResponseWriter = UIResponseWriter.WriteHealthCheckUIResponse,
-    });
-    webApplication.UseHealthChecksUI(opt =>
-    {
-      opt.UseRelativeApiPath = true;
-      opt.UIPath = "/health-check-ui";
-      opt.ApiPath = "/api/health";
-    });
+    webApplication
+      .MapGet("/api/health", async (IHealthCheckApiServiceAsync healthCheckService, HttpContext context)
+        => await healthCheckService.CheckHealthAsync(context, new CancellationTokenSource().Token))
+      .WithName("HealthCheck")
+      .WithOpenApi(x => new(x)
+      {
+        Tags =
+        [
+          new()
+      {
+        Name = "Health"
+      }
+        ]
+      })
+      .Produces<Payloads.HealthCheckPayload>(StatusCodes.Status200OK);
   }
 
   private static void MapDataAPI(this WebApplication webApplication)
   {
     webApplication
-      .MapGet("/api/data/announcements", async (IDataStoreServiceAsync dataStoreService)
+      .MapGet("/api/data/announcements", async (IDataStoreApiServiceAsync dataStoreService)
         => await dataStoreService.GetAnnouncementsAsync(new CancellationTokenSource().Token))
       .WithName("GetAnnouncements")
-      .WithOpenApi(x => new OpenApiOperation(x)
+      .WithOpenApi(x => new(x)
       {
-        Tags = [
-          new OpenApiTag() {
+        Tags =
+        [
+          new ()
+          {
             Name = "DataStore"
           },
         ]
@@ -97,13 +108,15 @@ public static class InitExtensions
       .Produces<ResultMessage<Payloads.AnnouncementsPayload>>(StatusCodes.Status200OK);
 
     webApplication
-      .MapPost("/api/data/announcement", async (IDataStoreServiceAsync dataStoreService, string twitchUser, ulong guildID, ulong channelID)
+      .MapPost("/api/data/announcement", async (IDataStoreApiServiceAsync dataStoreService, string twitchUser, ulong guildID, ulong channelID)
         => await dataStoreService.AddAnnouncementAsync(twitchUser, guildID, channelID, new CancellationTokenSource().Token))
       .WithName("AddAnnouncement")
       .WithOpenApi(x => new OpenApiOperation(x)
       {
-        Tags = [
-          new OpenApiTag() {
+        Tags =
+        [
+          new ()
+          {
             Name = "DataStore"
           },
         ]
@@ -111,13 +124,15 @@ public static class InitExtensions
       .Produces<ResultMessage<Payloads.AnnouncementPayload>>(StatusCodes.Status200OK);
 
     webApplication
-      .MapDelete("/api/data/announcement", async (IDataStoreServiceAsync dataStoreService, string twitchUser, ulong guildID, ulong? channelID)
+      .MapDelete("/api/data/announcement", async (IDataStoreApiServiceAsync dataStoreService, string twitchUser, ulong guildID, ulong? channelID)
         => await dataStoreService.DeleteAnnouncementAsync(twitchUser, guildID, channelID, new CancellationTokenSource().Token))
       .WithName("DeleteAnnouncement")
-      .WithOpenApi(x => new OpenApiOperation(x)
+      .WithOpenApi(x => new(x)
       {
-        Tags = [
-          new OpenApiTag() {
+        Tags =
+        [
+          new ()
+          {
             Name = "DataStore"
           },
         ]
@@ -128,13 +143,15 @@ public static class InitExtensions
   private static void MapDiscordAPI(this WebApplication webApplication)
   {
     webApplication
-      .MapGet("/api/discord/channelName", async (IDiscordClientServiceAsync discordClientService, ulong channelID)
+      .MapGet("/api/discord/channelName", async (IDiscordClientApiServiceAsync discordClientService, ulong channelID)
         => await discordClientService.GetChannelNameAsync(channelID, new CancellationTokenSource().Token))
       .WithName("GetChannelName")
-      .WithOpenApi(x => new OpenApiOperation(x)
+      .WithOpenApi(x => new(x)
       {
-        Tags = [
-          new OpenApiTag() {
+        Tags =
+        [
+          new ()
+          {
             Name = "Discord"
           },
         ]
@@ -142,45 +159,84 @@ public static class InitExtensions
       .Produces<ResultMessage<Payloads.ChannelNamePayload>>(StatusCodes.Status200OK);
 
     webApplication
-      .MapGet("/api/discord/guildName", (IDiscordClientServiceAsync discordClientService, ulong guildID)
+      .MapGet("/api/discord/guildName", (IDiscordClientApiServiceAsync discordClientService, ulong guildID)
         => discordClientService.GetGuildName(guildID))
       .WithName("GetGuildName")
-      .WithOpenApi(x => new OpenApiOperation(x)
+      .WithOpenApi(x => new(x)
       {
-        Tags = [
-          new OpenApiTag() {
+        Tags =
+        [
+          new ()
+          {
             Name = "Discord"
           },
         ]
       })
       .Produces<ResultMessage<Payloads.GuildNamePayload>>(StatusCodes.Status200OK);
+
+    webApplication
+      .MapGet("/api/discord/guildIconUrl", (IDiscordClientApiServiceAsync discordClientService, ulong guildID)
+        => discordClientService.GetGuildIconUrl(guildID))
+      .WithName("GetGuildIconUrl")
+      .WithOpenApi(x => new(x)
+      {
+        Tags =
+        [
+          new ()
+          {
+            Name = "Discord"
+          },
+        ]
+      })
+      .Produces<ResultMessage<Payloads.GuildIconUrlPayload>>(StatusCodes.Status200OK);
+
+    webApplication
+      .MapGet("/api/discord/clientData", (IDiscordClientApiServiceAsync discordClientService)
+        => discordClientService.GetClientData())
+      .WithName("GetClientData")
+      .WithOpenApi(x => new(x)
+      {
+        Tags =
+        [
+          new ()
+          {
+            Name = "Discord"
+          },
+        ]
+      })
+      .Produces<ResultMessage<Payloads.DiscordClientDataPayload>>(StatusCodes.Status200OK)
+      .Produces<ResultMessage<Payloads.DiscordClientDataPayload>>(StatusCodes.Status500InternalServerError);
   }
 
   private static void MapTwitchAPI(this WebApplication webApplication)
   {
     webApplication
-      .MapGet("/api/twitch/getStream", async (ITwitchClientServiceAsync twitchClientService, string username)
+      .MapGet("/api/twitch/getStream", async (ITwitchClientApiServiceAsync twitchClientService, string username)
         => await twitchClientService.GetStreamDataAsync(username, new CancellationTokenSource().Token))
       .WithName("GetStreamData")
-      .WithOpenApi(x => new OpenApiOperation(x)
+      .WithOpenApi(x => new(x)
       {
-        Tags = [
-          new OpenApiTag() {
+        Tags =
+        [
+          new ()
+          {
             Name = "Twitch"
           },
         ]
       })
-      .Produces<Payloads.StreamDataPayload>(StatusCodes.Status200OK)
-      .Produces<Payloads.StreamDataPayload>(StatusCodes.Status500InternalServerError);
+      .Produces<ResultMessage<Payloads.StreamDataPayload>>(StatusCodes.Status200OK)
+      .Produces<ResultMessage<Payloads.StreamDataPayload>>(StatusCodes.Status500InternalServerError);
 
     webApplication
-      .MapGet("/api/twitch/getUser", async (ITwitchClientServiceAsync twitchClientService, string username)
+      .MapGet("/api/twitch/getUser", async (ITwitchClientApiServiceAsync twitchClientService, string username)
         => await twitchClientService.GetUserDataAsync(username, new CancellationTokenSource().Token))
       .WithName("GetUserData")
-      .WithOpenApi(x => new OpenApiOperation(x)
+      .WithOpenApi(x => new(x)
       {
-        Tags = [
-          new OpenApiTag() {
+        Tags =
+        [
+          new ()
+          {
             Name = "Twitch"
           },
         ]
