# TWN.DiscordBot.WebHost/swagger.json
@@ -5,6 +5,26 @@
     "version": "1.0"
   },
   "paths": {
+    "/api/health": {
+      "get": {
+        "tags": [
+          "Health"
+        ],
+        "operationId": "HealthCheck",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HealthCheckPayload"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/data/announcements": {
       "get": {
         "tags": [
@@ -180,6 +200,67 @@
         }
       }
     },
+    "/api/discord/guildIconUrl": {
+      "get": {
+        "tags": [
+          "Discord"
+        ],
+        "operationId": "GetGuildIconUrl",
+        "parameters": [
+          {
+            "name": "guildID",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GuildIconUrlPayloadResultMessage"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/discord/clientData": {
+      "get": {
+        "tags": [
+          "Discord"
+        ],
+        "operationId": "GetClientData",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DiscordClientDataPayloadResultMessage"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DiscordClientDataPayloadResultMessage"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/twitch/getStream": {
       "get": {
         "tags": [
@@ -202,7 +283,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/StreamDataPayload"
+                  "$ref": "#/components/schemas/StreamDataPayloadResultMessage"
                 }
               }
             }
@@ -212,7 +293,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/StreamDataPayload"
+                  "$ref": "#/components/schemas/StreamDataPayloadResultMessage"
                 }
               }
             }
@@ -285,7 +366,12 @@
         "type": "object",
         "properties": {
           "announcement": {
-            "$ref": "#/components/schemas/Announcement"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/Announcement"
+              }
+            ],
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -301,7 +387,12 @@
             "nullable": true
           },
           "payload": {
-            "$ref": "#/components/schemas/AnnouncementPayload"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/AnnouncementPayload"
+              }
+            ],
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -330,7 +421,12 @@
             "nullable": true
           },
           "payload": {
-            "$ref": "#/components/schemas/AnnouncementsPayload"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/AnnouncementsPayload"
+              }
+            ],
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -360,7 +456,115 @@
             "nullable": true
           },
           "payload": {
-            "$ref": "#/components/schemas/ChannelNamePayload"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/ChannelNamePayload"
+              }
+            ],
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "DiscordClientChannelData": {
+        "type": "object",
+        "properties": {
+          "channelID": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "channelName": {
+            "type": "string",
+            "nullable": true
+          },
+          "channelPosition": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "categoryID": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "categoryName": {
+            "type": "string",
+            "nullable": true
+          },
+          "categoryPosition": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "DiscordClientData": {
+        "type": "object",
+        "properties": {
+          "guildData": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/DiscordClientGuildData"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "DiscordClientDataPayload": {
+        "type": "object",
+        "properties": {
+          "discordClientData": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DiscordClientData"
+              }
+            ],
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "DiscordClientDataPayloadResultMessage": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean"
+          },
+          "message": {
+            "type": "string",
+            "nullable": true
+          },
+          "payload": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DiscordClientDataPayload"
+              }
+            ],
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "DiscordClientGuildData": {
+        "type": "object",
+        "properties": {
+          "guildID": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "guildName": {
+            "type": "string",
+            "nullable": true
+          },
+          "guildIconUrl": {
+            "type": "string",
+            "nullable": true
+          },
+          "discordChannelData": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/DiscordClientChannelData"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -380,7 +584,47 @@
             "nullable": true
           },
           "payload": {
-            "$ref": "#/components/schemas/EmptyPayload"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/EmptyPayload"
+              }
+            ],
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "GuildIconUrlPayload": {
+        "type": "object",
+        "properties": {
+          "guildID": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "guildIconUrl": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "GuildIconUrlPayloadResultMessage": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean"
+          },
+          "message": {
+            "type": "string",
+            "nullable": true
+          },
+          "payload": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/GuildIconUrlPayload"
+              }
+            ],
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -410,7 +654,63 @@
             "nullable": true
           },
           "payload": {
-            "$ref": "#/components/schemas/GuildNamePayload"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/GuildNamePayload"
+              }
+            ],
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "HealthCheckPayload": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string",
+            "nullable": true
+          },
+          "totalDuration": {
+            "type": "string",
+            "format": "date-span"
+          },
+          "entries": {
+            "type": "object",
+            "additionalProperties": {
+              "$ref": "#/components/schemas/HealthCheckPayloadEntry"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "HealthCheckPayloadEntry": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "object",
+            "additionalProperties": {},
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "duration": {
+            "type": "string",
+            "format": "date-span"
+          },
+          "status": {
+            "type": "string",
+            "nullable": true
+          },
+          "tags": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -419,10 +719,36 @@
         "type": "object",
         "properties": {
           "streamsResponse": {
-            "$ref": "#/components/schemas/StreamsResponseData"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/StreamsResponseData"
+              }
+            ],
+            "nullable": true
           },
           "isOnline": {
             "type": "boolean"
+          }
+        },
+        "additionalProperties": false
+      },
+      "StreamDataPayloadResultMessage": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean"
+          },
+          "message": {
+            "type": "string",
+            "nullable": true
+          },
+          "payload": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/StreamDataPayload"
+              }
+            ],
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -500,7 +826,12 @@
         "type": "object",
         "properties": {
           "usersResponse": {
-            "$ref": "#/components/schemas/UsersResponseData"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/UsersResponseData"
+              }
+            ],
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -516,7 +847,12 @@
             "nullable": true
           },
           "payload": {
-            "$ref": "#/components/schemas/UserDataPayload"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/UserDataPayload"
+              }
+            ],
+            "nullable": true
           }
         },
         "additionalProperties": false
